# fastapi-parquet

./: README.md  pyproject.toml
src/fastapi_parquet/: __init__.py
